<resources>
    <string name="app_name">FrameUp</string>
    <string name="roll_no">Rollno</string>
    <string name="str_password">Password</string>
    <string name="str_login">Login</string>
    <string name="str_register">Register</string>
    <string name="str_name">Full Name</string>
    <string name="str_phone">Phone</string>
    <string name="str_setPass">Password</string>
    <string name="str_confirmPass">Confirm Password</string>
    <string name="str_email">Email</string>
    <string name="str_gender">Gender</string>
    <string name="str_male">Male</string>
    <string name="str_female">Female</string>
    <string name="str_verify">Verify</string>
    <string name="select">Select</string>
    <string name="internal_storage">strorage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="title_activity_sign_in">SignInActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_continue">Login to Continue</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="str_confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message</string>

</resources>