<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/frameupregisterationbg"
    tools:context=".Activities.Registeration">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="342dp"
        android:layout_height="290dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fullname_tf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/Secondary_Color_1"
            android:textColor="@color/Primary_Color_1"
            android:textColorHint="@color/Secondary_Color_1"
            android:hint="@string/str_name"
            android:minHeight="50dp"

          />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_tf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/Secondary_Color_1"
            android:textColor="@color/Primary_Color_1"
            android:textColorHint="@color/Secondary_Color_1"
            android:hint="@string/str_email"
            android:minHeight="50dp"

         />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_tf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/Secondary_Color_1"
            android:textColor="@color/Primary_Color_1"
            android:textColorHint="@color/Secondary_Color_1"
            android:hint="@string/str_phone"
            android:minHeight="50dp"
           />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_tf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="5dp"

            android:hint="@string/str_setPass"
            android:minHeight="50dp"

            android:backgroundTint="@color/Secondary_Color_1"
            android:textColor="@color/Primary_Color_1"
            android:textColorHint="@color/Secondary_Color_1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Gender : "
                android:textColor="@color/Secondary_Color_1"
                android:textSize="20dp" />

            <RadioButton
                android:id="@+id/male"
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_weight="1"
                android:buttonTint="@color/Secondary_Color_1"
                android:text="@string/str_male"
                android:textColor="@color/Secondary_Color_1"
                android:textSize="16dp" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:buttonTint="@color/Secondary_Color_1"
                android:text="@string/str_female"
                android:textColor="@color/Secondary_Color_1"
                android:textSize="16dp" />


        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/verify_btn"
        android:layout_width="219dp"
        android:layout_height="44dp"
        android:background="@drawable/button_stroke"
        android:text="@string/str_register"
        android:textAllCaps="false"
        android:textColor="@color/Primary_Color_2"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.226" />

    <TextView
        android:id="@+id/Reg_Error"
        android:layout_width="116dp"
        android:layout_height="16dp"
        android:layout_marginTop="108dp"
        android:text=" "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>