<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/frameuploginbg"
    android:fitsSystemWindows="true"
    tools:context=".Activities.Login">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="319dp"
        android:layout_height="141dp"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.426">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rollno_lg_tf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="3dp"
            android:backgroundTint="@color/Primary_Color_2"
            android:hint="@string/roll_no"
            android:textSize="18dp"
            android:minHeight="50dp"
            android:textColor="@color/Primary_Color_2"
            android:textColorHint="@color/Secondary_Color_1" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_lg_tf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/Primary_Color_2"
            android:hint="@string/str_password"
            android:inputType="textPassword"
            android:minHeight="50dp"
            android:textSize="18dp"
            android:textColor="@color/Primary_Color_2"
            android:textColorHint="@color/Secondary_Color_1" />


    </LinearLayout>

    <TextView
        android:id="@+id/Error"
        android:layout_width="260dp"
        android:layout_height="18dp"
        android:text=" "
        android:textAlignment="gravity"
        android:textColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/log_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/log_btn"
        android:layout_width="223dp"
        android:layout_height="46dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/button_style_gradient"
        android:text="@string/str_login"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:layout_width="195dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_btn"
        app:layout_constraintVertical_bias="0.062">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/grey"
            android:text="Don't have Account?" />

        <TextView
            android:id="@+id/reg_text"
            android:layout_width="7dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/Primary_Color_1"
            android:clickable="true"
            android:text="Register" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_login"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>